Support compilation to scala native